--- a/package.json
+++ b/package.json
@@ -23,9 +23,9 @@
     "next": "15.0.1",
     "next-auth": "^4.24.11",
     "next-themes": "^0.3.0",
-    "react": "19.0.0-rc-69d4b800-20241021",
+    "react": "^18.3.1",
     "react-day-picker": "8.10.1",
-    "react-dom": "19.0.0-rc-69d4b800-20241021",
+    "react-dom": "^18.3.1",
     "tailwind-merge": "^2.5.2",
     "tailwindcss-animate": "^1.0.7"
   },
