--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "next": "15.0.1",
     "next-auth": "^4.24.11",
     "next-themes": "^0.3.0",
+    "pino": "^9.6.0",
     "react": "^18.3.1",
     "react-day-picker": "8.10.1",
     "react-dom": "^18.3.1",
